Troca o método List.of por Arrays.asList